styles.css
body {
  margin: 0;
  text-align: center;
  font-family: "Urbanist", sans-serif;
  font-weight: 400;
}

header {
  background-color: #e87500;
  padding: 0.1em;
}

.flex-container {
  display: flex;
}

.welcome-image {
  width: 50%;
}

df-messenger {
    position: relative;
    width: 50%;
}

.heading {
  font-size: 50px;
  font-weight: 900;
}

.tagline {
  font-size: 20px;
  font-weight: 400;
  font-style: italic;
}

/* Add a dark green background color to the top navigation */
.topnav {
  width: 100%;
  background-color: #154734;
  overflow: auto;
}

/* Style the links inside the navigation bar */
.topnav a {
  float: left;
  color: #f2f2f2;
  padding: 16.6px;
  text-decoration: none;
  font-size: 17px;
  width: 31%;
  text-align: center;
}

/* Change the color of links on hover */
.topnav a:hover {
  background-color: #fff;
  color: black;
}

footer {
  background-color: #154734;
  padding: 0.1em;
  color: #fff;
  position: relative;
  bottom: 0;
  width: 100%;
  height: 5em;
}

